--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,13 +25,12 @@
                 android:layout_height="wrap_content"
                 android:text="Go to Profile"/>
     </LinearLayout>
-    <LinearLayout
+    <FrameLayout
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical">
-    </LinearLayout>
+            android:layout_weight="1">
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
