--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,27 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".HomeFragment">
-
+    <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/rc_view"/>
+        <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:clickable="true"-->
+        <!--app:srcCompat="@android:drawable/ic_input_add"-->
+        <!--android:id="@+id/fab_tambah"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--app:layout_constraintHorizontal_bias="0.887"-->
+        <!--app:layout_constraintVertical_bias="0.937"/>-->
     <!-- TODO: Update blank fragment layout -->
+    </android.support.constraint.ConstraintLayout>
 </FrameLayout>
